added bgfx shader compilation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -159,13 +159,48 @@ if(USE_BGFX)
         "${CMAKE_SOURCE_DIR}/bgfx/shaders/*.sc"
     )
 
+    # Find shaderc executable once for all shaders
+    find_program(SHADERC_EXECUTABLE
+        NAMES shaderc shaderc.exe
+        PATHS
+            # vcpkg installed bgfx tools
+            "${CMAKE_BINARY_DIR}/vcpkg_installed/x64-osx/tools/bgfx"
+            "${CMAKE_BINARY_DIR}/vcpkg_installed/x64-linux/tools/bgfx"
+            "${CMAKE_BINARY_DIR}/vcpkg_installed/x64-windows/tools/bgfx"
+            "${CMAKE_CURRENT_LIST_DIR}/vcpkg_installed/x64-osx/tools/bgfx"
+            "${CMAKE_CURRENT_LIST_DIR}/vcpkg_installed/x64-linux/tools/bgfx"
+            "${CMAKE_CURRENT_LIST_DIR}/vcpkg_installed/x64-windows/tools/bgfx"
+            # Common bgfx installation paths
+            "${CMAKE_SOURCE_DIR}/tools/bin"
+            "${CMAKE_SOURCE_DIR}/bgfx/tools/bin"
+            "${CMAKE_SOURCE_DIR}/../bgfx/tools/bin"
+            "${CMAKE_SOURCE_DIR}/third_party/bgfx/tools/bin"
+            # System paths
+            "/usr/local/bin"
+            "/opt/homebrew/bin"
+            # Environment variable paths
+            "$ENV{BGFX_DIR}/tools/bin"
+            "$ENV{BGFX_ROOT}/tools/bin"
+        DOC "bgfx Shader Compiler (shaderc)"
+    )
+    
+    if(NOT SHADERC_EXECUTABLE)
+        message(WARNING "shaderc not found. bgfx shaders will not be compiled.")
+        message(WARNING "To fix this:")
+        message(WARNING "  1. Install bgfx with tools: vcpkg install bgfx[tools]")
+        message(WARNING "  2. Or set BGFX_DIR environment variable to bgfx installation")
+        message(WARNING "  3. Or place shaderc executable in tools/bin/ directory")
+    else()
+        message(STATUS "Found shaderc: ${SHADERC_EXECUTABLE}")
+    endif()
+
     # Function to compile bgfx shaders using shaderc
     function(add_bgfx_shader TARGET_NAME SHADER_FILE SHADER_TYPE PLATFORM)
         get_filename_component(SHADER_NAME ${SHADER_FILE} NAME_WE)
         get_filename_component(SHADER_DIR ${SHADER_FILE} DIRECTORY)
         
         # Create output path
-        set(COMPILED_SHADER "${CMAKE_BINARY_DIR}/bgfx/shaders/${SHADER_NAME}_${SHADER_TYPE}_${PLATFORM}.bin")
+        set(COMPILED_SHADER "${CMAKE_BINARY_DIR}/bgfx/shaders/${SHADER_NAME}_${PLATFORM}.bin")
         
         # Ensure output directory exists
         get_filename_component(COMPILED_SHADER_DIR ${COMPILED_SHADER} DIRECTORY)
@@ -242,12 +277,12 @@ if(USE_BGFX)
                 -i "${CMAKE_SOURCE_DIR}/bgfx/shaders"
                 -i "${CMAKE_BINARY_DIR}/vcpkg_installed/x64-osx/include/bgfx"
             DEPENDS ${SHADER_FILE}
+            WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
             COMMENT "Compiling bgfx shader: ${SHADER_NAME} (${SHADER_TYPE}/${PLATFORM})"
             VERBATIM
         )
         
-        # Add to target sources so CMake tracks dependencies properly
-        target_sources(${TARGET_NAME} PRIVATE ${COMPILED_SHADER})
+        # Mark shader as generated file (don't add to target sources since we use custom target)
         set_source_files_properties(${COMPILED_SHADER} PROPERTIES GENERATED TRUE)
     endfunction()
 
@@ -346,6 +381,13 @@ endif() # USE_D3D12
 
 # Process bgfx shader files and compile them
 if(USE_BGFX AND BGFX_SHADER_FILES)
+    # Ensure bgfx shader output directory exists
+    file(MAKE_DIRECTORY ${CMAKE_BINARY_DIR}/bgfx/shaders)
+    
+    set(ALL_BGFX_COMPILED_SHADERS "")
+    set(BGFX_SHADER_COUNT 0)
+    
+    # Process each shader file and create compilation commands
     foreach(BGFX_SHADER_FILE ${BGFX_SHADER_FILES})
         get_filename_component(SHADER_NAME ${BGFX_SHADER_FILE} NAME_WE)
         
@@ -367,18 +409,57 @@ if(USE_BGFX AND BGFX_SHADER_FILES)
         if(NOT SHADER_TYPE STREQUAL "")
             # Compile for each target platform
             foreach(PLATFORM ${BGFX_PLATFORMS})
-                add_bgfx_shader(Engine ${BGFX_SHADER_FILE} ${SHADER_TYPE} ${PLATFORM})
-                set(COMPILED_SHADER_PATH "${CMAKE_BINARY_DIR}/bgfx/shaders/${SHADER_NAME}_${SHADER_TYPE}_${PLATFORM}.bin")
+                set(COMPILED_SHADER_PATH "${CMAKE_BINARY_DIR}/bgfx/shaders/${SHADER_NAME}_${PLATFORM}.bin")
                 list(APPEND ALL_BGFX_COMPILED_SHADERS ${COMPILED_SHADER_PATH})
+                math(EXPR BGFX_SHADER_COUNT "${BGFX_SHADER_COUNT} + 1")
                 message(STATUS "  Will compile ${SHADER_NAME} as ${SHADER_TYPE} for ${PLATFORM}")
+                
+                # Determine profile for platform
+                if(PLATFORM STREQUAL "dx11")
+                    if(SHADER_TYPE STREQUAL "v")
+                        set(PROFILE "vs_5_0")
+                    elseif(SHADER_TYPE STREQUAL "f")
+                        set(PROFILE "ps_5_0")
+                    endif()
+                elseif(PLATFORM STREQUAL "metal")
+                    set(PROFILE "metal")
+                elseif(PLATFORM STREQUAL "spirv")
+                    set(PROFILE "spirv")
+                else() # OpenGL
+                    if(SHADER_TYPE STREQUAL "v")
+                        set(PROFILE "120")
+                    elseif(SHADER_TYPE STREQUAL "f")
+                        set(PROFILE "120")
+                    endif()
+                endif()
+                
+                # Add custom command to compile this specific shader
+                add_custom_command(
+                    OUTPUT ${COMPILED_SHADER_PATH}
+                    COMMAND ${CMAKE_COMMAND} -E make_directory "${CMAKE_BINARY_DIR}/bgfx/shaders"
+                    COMMAND ${SHADERC_EXECUTABLE}
+                        -f ${BGFX_SHADER_FILE}
+                        -o ${COMPILED_SHADER_PATH}
+                        --type ${SHADER_TYPE}
+                        --platform ${PLATFORM}
+                        --profile ${PROFILE}
+                        -i "${CMAKE_SOURCE_DIR}/bgfx/shaders"
+                        -i "${CMAKE_BINARY_DIR}/vcpkg_installed/x64-osx/include/bgfx"
+                    DEPENDS ${BGFX_SHADER_FILE}
+                    COMMENT "Compiling bgfx shader: ${SHADER_NAME} (${SHADER_TYPE}/${PLATFORM})"
+                    VERBATIM
+                )
             endforeach()
         endif()
     endforeach()
     
-    # Create a custom target that depends on all compiled bgfx shaders
+    # Create a custom target that depends on all compiled shaders
     if(ALL_BGFX_COMPILED_SHADERS)
-        list(LENGTH ALL_BGFX_COMPILED_SHADERS BGFX_SHADER_COUNT)
-        add_custom_target(CompileBgfxShaders ALL DEPENDS ${ALL_BGFX_COMPILED_SHADERS})
+        add_custom_target(CompileBgfxShaders ALL
+            DEPENDS ${ALL_BGFX_COMPILED_SHADERS}
+            COMMENT "Compiling all bgfx shaders"
+        )
+        
         add_dependencies(Engine CompileBgfxShaders)
         message(STATUS "Created CompileBgfxShaders target with ${BGFX_SHADER_COUNT} shaders")
         message(STATUS "Compiled bgfx shaders will be available in: ${CMAKE_BINARY_DIR}/bgfx/shaders/")
@@ -558,7 +639,6 @@ if(USE_BGFX AND ALL_BGFX_COMPILED_SHADERS)
             ${CMAKE_BINARY_DIR}/bgfx/shaders
             $<TARGET_FILE_DIR:Engine>/bgfx/shaders
         COMMENT "Copying compiled bgfx shader files to output directory"
-        DEPENDS CompileBgfxShaders
     )
 endif()
 
@@ -581,7 +661,6 @@ if(USE_BGFX AND ALL_BGFX_COMPILED_SHADERS)
             ${CMAKE_BINARY_DIR}/bgfx/shaders
             $<TARGET_FILE_DIR:EngineTests>/bgfx/shaders
         COMMENT "Copying compiled bgfx shader files to test output directory"
-        DEPENDS CompileBgfxShaders
     )
 endif()
 
