--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -670,6 +670,8 @@ endif()
 # Link Engine executable to EngineLib (all dependencies are handled by EngineLib)
 target_link_libraries(Engine PRIVATE EngineLib)
 
+# Create engine library
+
 #==============================================================================
 # Test Executable
 #==============================================================================
